# ReinforcementLearningBrackeysGame

./: .gitignore  1. random.py  1. randombrackeys.py  10. Change Reward Plus FrameStack.py  11. Change Reward Plus FrameStack Score.py  12A. Curriculum.py  12B. Curriculum Learning 2PlatsNoEnemies - Score.py  13A. Curriculum 2 Moving Plats.py  13B. Curriculum Learning 2MovingPlatsNoEnemies - Scorev2.py  13C. Curriculum 2 Moving Plats Continued.py  13D. Curriculum Learning 2MovingPlatsNoEnemies - Scorev2 .py  14A. Removing Framestack 2 StaticPlats.py  14A. Removing Framestack.py  14B. Removing Framestack Scoring.py  14C. NoStack but with Enemies.py  14D. NoStack but with Enemies Scoring.py  14D2. NoStack but with Enemies Eval.py  14E. NoStack but with Enemies AND with Long Moving Platy NoTimeLimit.py  14E2. NoStack but with Enemies AND with Long Moving Platy.py  14F. NoStack but with Enemies Eval AND Long Moving Platform.py  14G. NoStack but with Enemies AND Beast Level RandomStart.py  14H. NoStack but with Enemies AND Beast Level Score.py  14I. NoStack but with Enemies AND Beast Level RandomStart Continued.py  14J. NoStack but with Enemies AND Beast Level Score Continued copy.py  14K. Beast Level RandomStart But At Beginning.py  14L. Beast Level RandomStart But At Beginning Score.py  2. PPO.py  3. Score.py  4. Continue Training.py  5. Score Continued.py  6. Continue Training Change Rays.py  6. PPO Better Ray Pos.py  7. Score Better Ray.py  8. Change Reward.py  9. Change Reward Score.py  README.md  pyproject.toml
model_curriculum/7. BeastLevel/: BeastLevel.onnx
(+75 files in other folders)
