[project]
name = "18-08-2025-godotrl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorama>=0.4.6",
    "godot-rl>=0.8.2",
    "gym>=0.26.2",
    "gymnasium>=0.29.1",
    "imitation>=1.0.0",
    "jupyter>=1.1.1",
    "sb3-contrib>=2.4.0",
    "tensorboard>=2.20.0",
]
